Fix spacing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -11,6 +11,10 @@ body {
 	line-height: 1.4;
 	color: $text-color;
 	background-color: $background-color;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100vh;
 }
 
 header,
@@ -20,7 +24,8 @@ main {
 
 /*** wrapper div for both header and main ***/
 .wrapper {
-	margin: 12vh auto;
+	margin: auto;
+	padding: 20px 0px;
 	display: flex;
     flex-flow: column wrap;
 }
@@ -158,8 +163,7 @@ footer {
 @media (min-width: 480px) {
 	/* wrapper stays 480px wide past 480px wide and is kept centered */
 	.wrapper {
-		width: 460px;
-		// margin: 10% auto 0 auto;
+		width: 450px;
 	}
 }
 
@@ -168,27 +172,6 @@ footer {
 	/* past 768px the layout is changed and the wrapper has a fixed width of 680px
 	to accomodate both the header column and the content column */
 	.wrapper {
-		margin: 15vh auto;
 		width: 560px; /*680px*/
 	}
-
-	// /* the header column stays left and has a dynamic width with all contents
-	// aligned right */
-	// header {
-	// 	float: left;
-	// 	width: 28%;
-	// 	text-align: right;
-	// }
-
-	// .author-container h1,
-	// .logo-container,
-	// .tagline-container p {
-	// 	text-align: right;
-	// }
-
-	// main {
-	// 	width: 46%;
-	// 	margin-left: 54%;
-	// 	padding: 0;
-	// }
 }
